FIX - Overflow

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -39,7 +39,7 @@
   filter: drop-shadow(0px 50px 40px var(--dark-back))
     drop-shadow(0px -50px 40px var(--dark-back));
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .fade-in {
